#fn Fix some translations in dataprep
* - Fix not translated words in dataflow add popup
- Fix wrong total number
- Add cursor to sortable column

* Fix css - when dataset name is too long in add to existing dataflow popup

* Fix language pack 파일 -> my file (create dataset)

--- a/discovery-frontend/src/assets/css/metatron/popup/metatron.popup.99Preperation_dataset.css
+++ b/discovery-frontend/src/assets/css/metatron/popup/metatron.popup.99Preperation_dataset.css
@@ -7,7 +7,7 @@
 .popup-prep-dataset .ddp-ui-popup-contents {padding-top:170px;}
 .popup-prep-dataset .ddp-ui-dataset-new .ddp-wrap-viewtable {bottom:33px;}
 .popup-prep-dataset .ddp-type-top-option .ddp-ui-rightoption .ddp-data-total {position:relative; top:6px;}
-.popup-prep-dataset .ddp-ui-popup-contents .ddp-data-dataset {position:absolute; top:104px; left:50px; right:50px; padding:15px 20px; background-color:#f6f6f7; font-size:14px; color:#35393f;}
+.popup-prep-dataset .ddp-ui-popup-contents .ddp-data-dataset {position:absolute; top:104px; left:50px; right:50px; padding:15px 20px; background-color:#f6f6f7; font-size:14px; color:#35393f; white-space:nowrap; text-overflow:ellipsis; overflow:hidden;}
 .popup-prep-dataset .ddp-ui-popup-contents .ddp-data-dataset .ddp-txt-label {color:#90969f; font-size:14px;}
 /**************************************************************
   popup : 99_데이터프리퍼레이션_02데이터셋_01생성완료_popup
